Fixed z-index for sidebar toggle arrow

--- a/assets/css/hope-ui.css
+++ b/assets/css/hope-ui.css
@@ -19868,6 +19868,7 @@ body.offcanvas-active {
   position: absolute;
   right: -12px;
   top: 85px;
+  z-index: 2;
   cursor: pointer;
   background: var(--bs-primary);
   color: #ffffff;
